# rises

./: .dockerignore  .gitignore  Doxyfile  LICENSE  NOTICE  README.md  RISES_SYSTEM_DESIGN.md  build_container.sh  central.dockerfile  central_entrypoint.sh  entrypoint.sh  rises.dockerfile  ros4hri.repos  unity_entrypoint.sh
src/fiware_bridge/: CMakeLists.txt  package.xml
src/fiware_bridge/include/fiware_bridge/: fiware_bridge_node.hpp
src/fiware_bridge/launch/: fiware_bridge.launch.py
src/fiware_bridge/src/: fiware_bridge_node.cpp
src/fiware_bridge/test/: test_message_serialization.cpp  test_throttling.cpp
src/fiware_bridge/test/concurrency/: test_pallet_map_race.cpp
src/fiware_bridge/test/regression/: test_audit_14_grid_index_overflow.cpp  test_audit_15_diag_json_injection.cpp
src/fleet_interface/: CMakeLists.txt  package.xml
src/fleet_interface/include/fleet_interface/: fleet_interface_node.hpp  vda5050_converter.hpp  vda5050_state_bridge.hpp
src/fleet_interface/src/: fleet_interface_node.cpp  vda5050_converter.cpp  vda5050_state_bridge.cpp
src/fleet_interface/test/: test_state_bridge.cpp
src/fleet_interface/test/regression/: test_audit_04_oversize_vda5050.cpp  test_audit_13_frame_param_swap.cpp
src/geofence/: CMakeLists.txt  package.xml
src/geofence/cmake/: FindEigen3Custom.cmake  FindLiburcu.cmake  FindNanoflann.cmake  FindNlohmann_json.cmake  FindXSIMD.cmake
src/geofence/common/src/: latency_recorder.cpp
src/geofence/spatial_node/docs/: obstacle_tracking.md
src/geofence/test/: test_boundary_checker.cpp  test_edge_cases_comprehensive.cpp  test_geofence_config.cpp  test_lifecycle_node_base.cpp  test_obstacle_contract.cpp  test_obstacle_conversions.cpp  test_obstacle_correspondence_matcher.cpp  test_occupancy_grid_map.cpp  test_path_safety.cpp  test_robot_tracking_checker.cpp  test_spatial_index.cpp  test_visualizer.cpp
src/geofence/test/concurrency/: test_rcu_thread_guard.cpp  test_robot_tracker_race.cpp
src/geofence/test/regression/: test_audit_01_collision_inverted.cpp  test_audit_02_json_load_aborts_activate.cpp  (+4 more)
src/laserscan_preprocessor/: CMakeLists.txt  README.md  package.xml
src/laserscan_preprocessor/cmake/: FindNanoflann.cmake  FindTBB.cmake  FindXSIMD.cmake
src/laserscan_preprocessor/launch/: laser_preprocessor.launch.py  test_laser_preprocessor.launch.py
src/laserscan_preprocessor/scripts/: test_scan_publisher.py
src/laserscan_preprocessor/src/: laserscan_preprocessor_node.cpp
src/laserscan_preprocessor/test/: TEST_COVERAGE.md  test_algorithms.cpp  test_laserscan_preprocessor_node.cpp  test_multi_laser_sync.cpp  test_point_fitter.cpp  test_polygon_fitter.cpp  test_segmentation_logic.cpp  test_tf_failure_modes.cpp
src/message_translator/: CMakeLists.txt  README.md  package.xml
src/message_translator/config/: params.yaml
src/message_translator/launch/: geofence_translator.launch.py
src/message_translator/src/: aabb_converter.cpp  area_locks_converter.cpp  contours_converter.cpp  delivery_strategy.cpp  json_message_translator.cpp  message_translator_node.cpp  tf_replay_manager.cpp  vda5050_converter.cpp  vda5050_state_bridge.cpp
src/message_translator/test/: test_aabb_converter.cpp  test_area_locks.cpp  test_contour_processing.cpp  test_error_handling.cpp  test_geofence_translator.cpp  test_integration.cpp  test_tf_handling.cpp  test_vda5050_converter.cpp
src/obstacle_aggregator/: CMakeLists.txt  package.xml
src/obstacle_aggregator/launch/: obstacle_aggregator.launch.py
src/obstacle_aggregator/src/: main.cpp  obstacle_aggregator_node.cpp
src/obstacle_aggregator/test/: test_combine.cpp
src/obstacle_heatmap_predictor/: CMakeLists.txt  package.xml
src/obstacle_heatmap_predictor/launch/: heatmap_predictor.launch.py
src/obstacle_heatmap_predictor/src/: heatmap_predictor_node.cpp  main.cpp
src/obstacle_heatmap_predictor/test/: test_grid_serialization.cpp  test_track_decay.cpp
src/rises_bringup/: CMakeLists.txt  package.xml
src/rises_bringup/config/: central_params.yaml  params_default.yaml  params_rosbag.yaml  params_unity.yaml  rosbag_qos_override.yaml
src/rises_bringup/launch/: central.launch.py  geofence.launch.py  multi_agv_geofence.launch.py  rises_geofence.launch.py  unity.launch.py
src/rises_bringup/rises_bringup/: rises_aux.py  rises_config.py
src/rises_bringup/test/: test_aux_helpers.py  test_launch_descriptions.py  test_params_consistency.py
src/rises_interfaces/: CMakeLists.txt  package.xml
src/rises_interfaces/msg/: MissionStatus.msg
src/rises_leg_filter/: CMakeLists.txt  package.xml
src/rises_leg_filter/launch/: leg_filter.launch.py
src/rises_leg_filter/src/: leg_filter_node.cpp  main.cpp
src/rises_leg_filter/test/: test_leg_track_lifecycle.cpp
src/rises_mission_controller/: CMakeLists.txt  package.xml
src/rises_mission_controller/launch/: mission_controller.launch.py
src/rises_mission_controller/src/: main.cpp  mission_controller_node.cpp
src/rises_mission_controller/test/: test_active_mission_id.cpp  test_mission_state_machine.cpp
src/rises_skill_bridge/: CMakeLists.txt  package.xml
src/rises_skill_bridge/launch/: skill_bridge.launch.py
src/rises_skill_bridge/skills/: get_area_state.skill.json  get_map_info.skill.json  get_safety_radius.skill.json  set_area_state.skill.json  set_geofence_enabled.skill.json  set_safety_radius.skill.json  update_map.skill.json  update_warehouse_layout.skill.json  validate_path.skill.json
src/rises_skill_bridge/src/: skill_bridge_main.cpp  skill_bridge_node.cpp
src/rises_skill_bridge/test/: test_action_routing.cpp  test_skill_loader.cpp
src/rises_task_examples/: CMakeLists.txt  package.xml
src/rises_task_examples/launch/: task_examples.launch.py
src/rises_task_examples/src/: main.cpp  task_examples_node.cpp  task_runner.cpp
src/rises_task_examples/test/: test_task_runner_steps.cpp
src/safety/: CMakeLists.txt  CMakePresets.json  package.xml
src/safety/src/: safety.cpp
src/safety/test/: test_safety_logic.cpp
src/test_support/: CMakeLists.txt  package.xml
src/test_support/test/: test_smoke.cpp
(+223 files in other folders)
