<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fiware_bridge</name>
  <version>0.1.0</version>
  <description>
    Translates complex ROS 2 messages into FIWARE-friendly JSON strings.
    Publishes on fiware/* topics that the DDS Enabler forwards to Orion-LD.
    No FIWARE, NGSI-LD, or HTTP dependencies — purely a ROS 2 topic translator.
  </description>
  <maintainer email="niklas.dietz@slapstack.de">Niklas Dietz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rises_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>test_support</test_depend>
  <test_depend>geometry_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
